--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anfragen-beantworten",
+  "name": "tauri-vite-react-template",
   "private": true,
   "version": "0.0.0",
   "scripts": {
